--- a/block-BHaaan/about.html
+++ b/block-BHaaan/about.html
@@ -1,33 +1,13 @@
-<!---
-
-### Create a blog page having 2 articles.
-
-#### TODO 🚀:
-
-1. Create a blog page having 2 articles.
-2. The sample structure of a page has been shown below.
-
----
-
-![alt text](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/html-css/ex3.png)
-
----
-
-- Using a CSS reset is necessary.
-
-- Use appropriate semantic tags and keep the nesting and indentation clean.
-
--->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-  </head>
-  <body>
-      <header>
+</head>
+<body>
+    <header>
         <nav>
           <a href="index.html"> HOME</a>
           <a href="about.html">ABOUT</a>
@@ -62,6 +42,6 @@
       <footer>@Altcampus2019</footer>
 
     
-  </body>
-
+    
+</body>
 </html>
